<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".MainActivity"
    android:layout_weight="1"
    android:padding="16dp"
    android:stretchColumns="1, 2, 3, 4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp">

            <TextView
                android:id="@+id/output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:background="#996211"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="70sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/clear_all"
                android:background="@drawable/button_blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:minHeight="70dip"
                android:onClick="clear"
                android:contentDescription="@string/clear_all"
                android:text="@string/clear_all" />

            <Button
                android:id="@+id/percent"
                android:layout_width="0dp"
                android:background="@drawable/button_orange"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="70dip"
                android:onClick="operator"
                android:contentDescription="@string/modulus"
                android:text="@string/modulus" />

            <Button
                android:id="@+id/divide"
                android:background="@drawable/button_orange"
                android:layout_width="0dp"
                android:minHeight="70dip"
                android:layout_height="wrap_content"
                android:onClick="operator"
                android:layout_weight="1"
                android:contentDescription="@string/divide"
                android:text="@string/divide" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/seven"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/eight"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/nine"
                android:text="@string/nine" />

            <Button
                android:id="@+id/multiply"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/multiply"
                android:text="@string/multiply" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/four"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/four"
                android:text="@string/four" />

            <Button
                android:id="@+id/five"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/five"
                android:text="@string/five" />

            <Button
                android:id="@+id/six"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/six"
                android:text="@string/six" />

            <Button
                android:id="@+id/subtract"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/subtract"
                android:text="@string/subtract" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/one"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/one"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/two"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/three"
                android:text="@string/three" />

            <Button
                android:id="@+id/add"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/add"
                android:text="@string/add" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/button_orange"
                android:minHeight="70dip"
                android:onClick="operand"
                android:contentDescription="@string/zero"
                android:text="@string/zero" />

            <Button
                android:id="@+id/equals"
                android:background="@drawable/button_blue"
                android:minHeight="70dip"
                android:onClick="computeTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/equals"
                android:text="@string/equals" />

        </TableRow>


    </TableLayout>
